# rust-mailing-poc

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  compose.yaml
deadpool_imap/src/: connection.rs  lib.rs  session_wrapper.rs
deadpool_imap/src/session/: flag.rs  mod.rs  session_wrapper.rs
email_receiver/: Cargo.toml  Dockerfile
email_receiver/src/: imap_client.rs  main.rs
email_sender/: Cargo.toml  Dockerfile
email_sender/src/: config.rs  main.rs  smtp_client.rs
imap/: Cargo.toml  Dockerfile
imap/deadpool_imap/: Cargo.toml
imap/email_receiver/: Cargo.toml
imap/email_receiver/src/: config.rs  main.rs
imap/imap_client/: Cargo.toml
imap/imap_client/src/: config.rs  main.rs
imap/imap_connection_pool/: Cargo.toml
imap/imap_connection_pool/src/: connection.rs  lib.rs
imap_client/: Cargo.toml  Dockerfile
imap_client/src/: main.rs
smtp_client/: Cargo.toml  Dockerfile
smtp_client/src/: config.rs  main.rs  smtp_client.rs
