[package]
name = "email_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"]}
envy = "0.4.2"
serde = { version = "1.0.158", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
